[package]
name = "time-to-hid-keyboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
hidapi = "2.6.0"
# log = "0.4.11"
# structopt = "0.3.20"
# simplelog = "0.8.0"
# anyhow = "1.0.33"
# hex = "0.4.2"
